- FE <- BE communication - Neo4J graph database - Adding Task nodes to db in proper order and defining relationships